Correction du z-index de la progress bar

--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -39,6 +39,7 @@ $link-hover-color: #00746b;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 header{
     display: flex;
